# hiss

./: .gitignore  Cargo.toml  LICENSE  app.sql  deploy.sh  migrate.sh  readme.md
migration/: README.md
migration/src/: lib.rs  m20220101_000001_create_table_company.rs  m20230414_032409_create_table_user.rs  m20230414_033627_create_table_company_user.rs  m20230414_033849_create_table_short_domain.rs  m20230414_034409_create_table_short_url.rs  m20230417_035211_create_short_url_unique.rs  m20230419_055644_create_table_visit.rs
src/: config.rs  err.rs  main.rs  param.rs  router.rs  state.rs  tool.rs
src/entity/: company.rs  compnay_user.rs  mod.rs  short_domain.rs  short_url.rs  user.rs  visit.rs
src/handler/: company.rs  mod.rs  short_domain.rs  short_url.rs
