[package]
name = "hiss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"

dotenv = "0.15.0"
serde = { version = "1.0.160", features = ["derive"] }
config = "0.13.3"
tokio = { version="1.27.0", features = ["full"] } 

sea-orm={ version="0.11.2", features=["runtime-tokio-native-tls", "sqlx-postgres", "debug-print", "macros"] }
axum = "0.6.15"
chrono = "0.4.24"
uuid = { version="1.3.1", features = [ "v4","fast-rng","macro-diagnostics","md5" ]  }
openssl = {version = "0.10.35", features = ["vendored"]}
serde_json = "1.0.96"
axum-macros = "0.3.7"
url = "2.3.1"
